created footer and all its items and styling

--- a/index.html
+++ b/index.html
@@ -54,5 +54,31 @@
                 </div>
         </div>
     </div>
+    <footer class="foot-wrap bt">
+        <div class="row">
+            <div class="col-12">
+                <ul class="wrap">
+                    <li class="p-1"><a href="#">About</a></li>
+                    <li class="p-1"><a href="#">Help Center</a></li>
+                    <li class="p-1"><a href="#">Blog</a></li>
+                    <li class="p-1"><a href="#">Status</a></li>
+                    <li class="p-1"><a href="#">Jobs</a></li>
+                    <li class="p-1"><a href="#">Terms</a></li>
+                    <li class="p-1"><a href="#">Privacy policy</a></li>
+                    <li class="p-1"><a href="#">Cookies</a></li>
+                    <li class="p-1"><a href="#">Ads info</a></li>
+                    <li class="p-1"><a href="#">Brand</a></li>
+                    <li class="p-1"><a href="#">Apps</a></li>
+                    <li class="p-1"><a href="#">Advertise</a></li>
+                    <li class="p-1"><a href="#">Marketing</a></li>
+                    <li class="p-1"><a href="#">Businesses</a></li>
+                    <li class="p-1"><a href="#">Developers</a></li>
+                    <li class="p-1"><a href="#">Directory</a></li>
+                    <li class="p-1"><a href="#">Settings</a></li>
+                    <li class="p-1"><a href="#">© 2019 Twitter</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
