added transform property to svg in second row

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-12 row-2 p-2">
+    <div class="row mt-2 mb-2">
+        <div class="col-12 row-2">
             <div class="bird-bg">
                 <svg viewBox="0 0 24 24" class="twt">
                     <g>
@@ -34,7 +34,7 @@
                     </g>
                 </svg>
             </div>
-            <div class="headsup p-2">
+            <div class="headsup p-2 ml-auto mr-auto">
                 <div class="s-fll mt-3 mb-4">
                     <div class="search mr-3">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
@@ -56,12 +56,12 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12 d-flex jc-spa cta2">
+        <div class="col-12 d-flex jc-spa cta2 ml-auto mr-auto">
             <button class="sign-bn sgn btn text-white p-2 bn">Sign up</button>
             <button class="log-in lgn btn p-2 brand-color">Log in</button>
         </div>
     </div>
-    <footer class="row foot-wrap pt-2 pb-3">
+    <footer class="row foot-wrap pt-1 pb-3">
         <div class="col-12">
             <ul class="wrap d-flex jc-cen">
                 <li class="p-2"><a href="#">About</a></li>
