aligned the username and the password divs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="container">
     <div class="lg-main row">
-        <div class="ryt-con col-md-12 order-lg-2 col-lg-6 d-lg-flex">
+        <div class="col-12 ryt-con col-md-12 order-lg-2 col-lg-6 d-lg-flex">
             <div class="cta d-none d-lg-block">
                 <form method="post" class="d-flex jc-spe form">
                     <div class="username">
@@ -26,7 +26,7 @@
                             <div class="span-name pt-2">
                                 <span>Password</span>
                             </div>
-                            <input type="text" id="pword" class="bn inp">
+                            <input type="password" id="pword" class="bn inp">
                             <a href="#" class="p-link"><br>
                                 <span class="brand-color">Forgot password?</span>
                             </a>
