fixed form labels spacing and checked html validation errors

--- a/index.html
+++ b/index.html
@@ -15,19 +15,15 @@
                 <form method="post" class="d-flex jc-spe form">
                     <div class="username">
                         <label for="name" class="dsg d-flex">
-                           <div class="span-name pt-2">
-                               <span>Phone, email or username</span>
-                           </div>
-                            <input type="text" id="name" class="bn inp">
+                            <span class="span-name pt-2">Phone, email or username</span>
+                                <input type="text" id="name" class="bn inp">
                         </label>
                     </div>
                     <div class="pword">
                         <label for="pass" class="dsg d-flex">
-                            <div class="span-name pt-2">
-                                <span>Password</span>
-                            </div>
-                            <input type="password" id="pword" class="bn inp">
-                            <a href="#" class="p-link"><br>
+                            <span class="span-name pt-2">Password</span>
+                                <input type="password" id="pass" class="bn inp">
+                                <a href="#" class="p-link"><br>
                                 <span class="brand-color">Forgot password?</span>
                             </a>
                         </label>
